k8s/base/blockchain.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-node
spec:
  selector:
    app.kubernetes.io/name: blockchain-node
  ports:
    - name: rpc
      port: 8545
      targetPort: 8545
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blockchain-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blockchain-node
    spec:
      containers:
        - name: blockchain-node
          image: ghcr.io/igorsatsyuk/blockchain-secrets-vault/blockchain-node:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8545
              name: rpc
          readinessProbe:
            tcpSocket:
              port: rpc
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: rpc
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
