k8s/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis:7.4-alpine
          args:
            - --save
            - ""
            - --appendonly
            - "no"
          ports:
            - containerPort: 6379
              name: redis
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              ephemeral-storage: 64Mi
              memory: 64Mi
            limits:
              cpu: 250m
              ephemeral-storage: 128Mi
              memory: 256Mi
