k8s/base/secrets-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: secrets-api
spec:
  selector:
    app.kubernetes.io/name: secrets-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secrets-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secrets-api
    spec:
      containers:
        - name: secrets-api
          image: ghcr.io/igorsatsyuk/blockchain-secrets-vault/secrets-api:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
